# PCB-TEST01A_LVGL-displayCheck

./: .gitignore  CMakeLists.txt  README.md  partitions_ESP32S3.csv  partitions_defaults.csv  sdkconfig
components/240320W-C001/: CMakeLists.txt  esp_lcd_panel_240320W-C001.c  esp_lcd_panel_240320W-C001.h
components/XF024QV04B/: CMakeLists.txt  esp_lcd_panel_XF024QV04B.c  esp_lcd_panel_XF024QV04B.h
components/XF024QV06A/: CMakeLists.txt  esp_lcd_panel_XF024QV06A.c  esp_lcd_panel_XF024QV06A.h
components/XF024QV16A/: CMakeLists.txt  esp_lcd_panel_XF024QV16A.c  esp_lcd_panel_XF024QV16A.h
components/nvs_display_config/: CMakeLists.txt  nvs_display_config.c  nvs_display_config.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
main/ui/images/: ui_img_689278962.c  ui_img_799870042.c  ui_img_799871067.c  ui_img_799872092.c  ui_img_black_320x240_png.c  ui_img_blue_320x240_png.c  ui_img_green_320x240_png.c  ui_img_red_320x240_png.c  ui_img_rgb_320x240_png.c  ui_img_white_320x240_png.c
main/ui/screens/: ui_Screen1.c  ui_Screen2.c
